Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44509

Quassel crashes in QWidget::mapFromGlobal

XMLWordPrintable

    • 8fccfef424e7d2b7a2019b1f828234145d4011df

      When hovering a link in quassel it crashes, this didn't happen in Qt 5.3

       #0  0x00007fef3ec97751 in QGraphicsScene::views() const (this=0x0) at graphicsview/qgraphicsscene.cpp:3232
       #1  0x00007fef3e99f528 in QWidget::mapFromGlobal(QPoint const&) const (this=0x7fef45d15530, pos=...) at kernel/qwidget.cpp:12294
       #2  0x00007fef41ecf6bd in  () at /usr/lib/x86_64-linux-gnu/libQt5WebKitWidgets.so.5
       #3  0x00007fef3f7f73de in WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow>::expandCapacity(unsigned long) (this=0x7fff78e5e030, newMinCapacity=0) at ./wtf/Vector.h:300
       #4  0x00007fef3fb337f8 in void WTF::Vector<unsigned short, 0ul, WTF::CrashOnOverflow>::appendSlowCase<unsigned short>(unsigned short const&) (this=0x7fee8fd71c00, val=0x7fee8fd8b000) at ../WTF/wtf/Vector.h:300
       #5  0x00007fef3fb338b2 in void WTF::Vector<unsigned short, 0ul, WTF::CrashOnOverflow>::appendSlowCase<unsigned short>(unsigned short const&) (this=0x7fee8fd65e40, val=0x7fee8fd8b000) at ../WTF/wtf/Vector.h:300
       #6  0x00007fef3fb15d7c in void WTF::Vector<unsigned short, 0ul, WTF::CrashOnOverflow>::appendSlowCase<unsigned short>(unsigned short const&) (this=0x7fee8fd71c78, val=0x7fee8fd8b000) at ../WTF/wtf/Vector.h:300
       #7  0x00007fef3fb14bc6 in void WTF::Vector<unsigned short, 0ul, WTF::CrashOnOverflow>::appendSlowCase<unsigned short>(unsigned short const&) (this=0x0, val=0x7fff78e5e230) at ../WTF/wtf/Vector.h:300
       #8  0x00007fef3fb14dcd in void WTF::Vector<unsigned short, 0ul, WTF::CrashOnOverflow>::appendSlowCase<unsigned short>(unsigned short const&) (this=0x7fee8fd71c00, val=0x7fee8fd8f801) at ../WTF/wtf/Vector.h:300
       #9  0x00007fef3fafaea4 in void WTF::Vector<unsigned short, 0ul, WTF::CrashOnOverflow>::appendSlowCase<unsigned short>(unsigned short const&) (this=0x7fee8fd588f0, val=0x7fee8fd8f800) at ../WTF/wtf/Vector.h:300
       #10 0x00007fef3fb40d49 in void WTF::Vector<unsigned short, 0ul, WTF::CrashOnOverflow>::appendSlowCase<unsigned short>(unsigned short const&) (this=0x7fee8fdeb000, val=0x7fff78e5e360) at ../WTF/wtf/Vector.h:300
       #11 0x00007fef3fb40ef8 in void WTF::Vector<unsigned short, 0ul, WTF::CrashOnOverflow>::appendSlowCase<unsigned short>(unsigned short const&) (this=0x7fee8fdeb000, val=0x7fff78e5e360) at ../WTF/wtf/Vector.h:300
       #12 0x00007fef3fd5dfb1 in WTF::Vector<double, 0ul, WTF::CrashOnOverflow>::expandCapacity(unsigned long) (this=0x7fff78e5e030, newMinCapacity=0) at ../WTF/wtf/Vector.h:300
       #13 0x00007fef3fd5b0f8 in WTF::Vector<double, 0ul, WTF::CrashOnOverflow>::expandCapacity(unsigned long) (this=0x7fff78e5e030, newMinCapacity=0) at ../WTF/wtf/Vector.h:300
       #14 0x00007fef3fd5db8b in WTF::Vector<double, 0ul, WTF::CrashOnOverflow>::expandCapacity(unsigned long) (this=0x7fff78e5e030, newMinCapacity=0) at ../WTF/wtf/Vector.h:300
       #15 0x00007fef41af2959 in QMetaObject::activate(QObject*, int, int, void**) (sender=sender@entry=0x7fef4a2abb90, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3716
       #16 0x00007fef41af2fe7 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=sender@entry=0x7fef4a2abb90, m=m@entry=0x7fef3dd18d60 <QNetworkReply::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0)
          at kernel/qobject.cpp:3582
       #17 0x00007fef3dccc583 in QNetworkReply::finished() (this=this@entry=0x7fef4a2abb90) at .moc/moc_qnetworkreply.cpp:320
       #18 0x00007fef3dc43d8c in QNetworkReplyHttpImplPrivate::finished() (this=0x7fef4512d620) at access/qnetworkreplyhttpimpl.cpp:1962
       #19 0x00007fef3dccd569 in QNetworkReplyHttpImpl::qt_static_metacall(QObject*, QMetaObject::Call, int, void**) (_o=0x7fef4a2abb90, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x1e3) at .moc/moc_qnetworkreplyhttpimpl_p.cpp:228
       #20 0x00007fef41af36ca in QObject::event(QEvent*) (this=0x7fef4a2abb90, e=<optimized out>) at kernel/qobject.cpp:1245
       #21 0x00007fef3e96c2ec in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=0x7fef444eec80, receiver=0x7fef4a2abb90, e=0x7fee28009ec0) at kernel/qapplication.cpp:3722
       #22 0x00007fef3e971960 in QApplication::notify(QObject*, QEvent*) (this=0x7fff78e5ec00, receiver=0x7fef4a2abb90, e=0x7fee28009ec0) at kernel/qapplication.cpp:3505
       #23 0x00007fef41ac1bdb in QCoreApplication::notifyInternal(QObject*, QEvent*) (this=0x7fff78e5ec00, receiver=0x7fef4a2abb90, event=event@entry=0x7fee28009ec0) at kernel/qcoreapplication.cpp:932
       #24 0x00007fef41ac3c4b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (event=0x7fee28009ec0, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:228
       #25 0x00007fef41ac3c4b in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x7fef444ea380) at kernel/qcoreapplication.cpp:1536
       #26 0x00007fef41ac4248 in QCoreApplication::sendPostedEvents(QObject*, int) (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1394
       #27 0x00007fef41b1a6a3 in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=0x7fef445db910) at kernel/qeventdispatcher_glib.cpp:271
       #28 0x00007fef3c240ecd in g_main_context_dispatch (context=0x7fef280016f0) at /build/buildd/glib2.0-2.43.3/./glib/gmain.c:3122
       #29 0x00007fef3c240ecd in g_main_context_dispatch (context=context@entry=0x7fef280016f0) at /build/buildd/glib2.0-2.43.3/./glib/gmain.c:3737
       #30 0x00007fef3c2411b0 in g_main_context_iterate (context=context@entry=0x7fef280016f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/buildd/glib2.0-2.43.3/./glib/gmain.c:3808
       #31 0x00007fef3c24125c in g_main_context_iteration (context=0x7fef280016f0, may_block=1) at /build/buildd/glib2.0-2.43.3/./glib/gmain.c:3869
       #32 0x00007fef41b1aab7 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7fef445db840, flags=...) at kernel/qeventdispatcher_glib.cpp:418
       #33 0x00007fef41abf392 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7fff78e5eb70, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
       #34 0x00007fef41ac6fdc in QCoreApplication::exec() () at kernel/qcoreapplication.cpp:1185
       #35 0x00007fef42093708 in main ()
      

      Relevant commits: https://codereview.qt-project.org/#/c/97690/

        For Gerrit Dashboard: QTBUG-44509
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            tsdgeos_canonical Albert Astals Cid (Canonical) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes