src/widgets/kernel/qwidget.cpp
@@ -12272,7 +12272,7 @@ QPoint QWidget::mapToGlobal(const QPoint &pos) const
 {
 #ifndef QT_NO_GRAPHICSVIEW
     Q_D(const QWidget);
-    if (d->extra && d->extra->proxyWidget) {
+    if (d->extra && d->extra->proxyWidget && d->extra->proxyWidget->scene()) {
         const QList <QGraphicsView *> views = d->extra->proxyWidget->scene()->views();
         if (!views.isEmpty()) {
             const QPointF scenePos = d->extra->proxyWidget->mapToScene(pos);
@@ -12307,7 +12307,7 @@ QPoint QWidget::mapFromGlobal(const QPoint &pos) const
 {
 #ifndef QT_NO_GRAPHICSVIEW
     Q_D(const QWidget);
-    if (d->extra && d->extra->proxyWidget) {
+    if (d->extra && d->extra->proxyWidget && d->extra->proxyWidget->scene()) {
         const QList <QGraphicsView *> views = d->extra->proxyWidget->scene()->views();
         if (!views.isEmpty()) {
             const QPoint viewPortPos = views.first()->viewport()->mapFromGlobal(pos);
